Added welcome screen with option to login or register and cancel functionality from login screen to welcome screen

--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_login.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,15 @@
     tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.LoginActivity">
 
     <!-- Login progress -->
+
+    <ProgressBar
+        android:id="@+id/login_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -61,18 +70,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:text="@string/action_sign_in_short"
                 android:textStyle="bold" />
+
+            <Button
+                android:text="@string/cancel"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                android:onClick="cancel" />
 
         </LinearLayout>
     </ScrollView>
-
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
 
 </LinearLayout>
