--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_login.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.LoginActivity">
+    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.LoginActivity">
 
     <!-- Login progress -->
 
