--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.MainActivity">
+    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
