--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.MainActivity"
+    tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.MainActivity"
     tools:showIn="@layout/activity_main">
 
 </RelativeLayout>
