--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -29,17 +29,27 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <include layout="@layout/content_main"
+        android:id="@+id/include" />
+
     <Button
         android:text="Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/logout_button"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="top|left"
-        android:layout_gravity="bottom|right"
+        app:layout_anchorGravity="bottom|left"
+        android:layout_gravity="top|right"
         android:onClick="logout" />
 
-    <include layout="@layout/content_main"
-        android:id="@+id/include" />
+    <Button
+        android:text="Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/profile_button"
+        android:onClick="goProfile"
+        android:layout_gravity="bottom|right"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="top|left" />
 
 </android.support.design.widget.CoordinatorLayout>
