--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_profile.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_profile.xml
@@ -18,11 +18,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/username_text" />
 
         <TextView
             android:layout_width="match_parent"
@@ -30,23 +31,34 @@
             android:id="@+id/user_type_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/email_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/email_text" />
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/password_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/password_text" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPostalAddress"
+            android:ems="10"
+            android:id="@+id/home_address_text"
+            android:hint="Home Address" />
 
         <Button
-            android:text="Change Password"
+            android:text="Save Changes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/change_password_button" />
+            android:id="@+id/save_changes"
+            android:onClick="saveChanges" />
 
         <Button
             android:text="Cancel"
@@ -55,6 +67,12 @@
             android:id="@+id/logout_button"
             android:layout_gravity="left"
             android:onClick="cancel" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/error_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
     </LinearLayout>
 </RelativeLayout>
