submit water report functionality added

--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/styles.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/styles.xml
@@ -17,6 +17,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="AppCompactLight" parent="Theme.AppCompat.Light"/>
+    <style name="AppCompactLight" parent="Theme.AppCompat.Light" />
+
+    <style name="AppCompactLight.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppCompactLight.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppCompactLight.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
