--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
     tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.MainActivity">
 
     <include layout="@layout/content_main"
-        android:id="@+id/include"
-        android:layout_weight="1" />
+        android:id="@+id/include" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -33,23 +32,12 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="Maps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/maps_button"
-                android:onClick="goToMap"
-                android:layout_gravity="bottom|right"
-                app:layout_anchor="@+id/include"
-                app:layout_anchorGravity="top|left"
-                android:layout_weight="1" />
-
-            <Button
-                android:text="Submit"
+                android:text="Submit a Report"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/submit_button"
                 app:layout_anchor="@+id/include"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:onClick="report"/>
 
             <Button
