--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_submit_purity_report.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_submit_purity_report.xml
@@ -40,9 +40,9 @@
         android:id="@+id/button5"
         android:layout_weight="1"
         android:onClick="cancelReport"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignTop="@+id/conditionGroup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp" />
 
     <Button
         android:text="Submit"
@@ -137,8 +137,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
+        android:layout_marginTop="17dp"
         android:layout_below="@+id/editVirusPPM"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ListView
+        android:id="@+id/purityReportScroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="37dp" />
+        android:layout_below="@+id/conditionGroup" />
+
 </RelativeLayout>
