--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -15,54 +15,67 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:text="Profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/profile_button"
-                android:onClick="goProfile"
-                android:layout_gravity="bottom|right"
-                app:layout_anchor="@+id/include"
-                app:layout_anchorGravity="top|left"
-                android:layout_weight="1" />
-
-            <Button
-                android:text="Submit a Report"
-                android:layout_width="78dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/submit_button"
-                app:layout_anchor="@+id/include"
-                android:onClick="report"
-                android:layout_weight="0.50" />
-
-            <Button
-                android:id="@+id/button6"
-                android:layout_width="99dp"
-                android:layout_height="wrap_content"
-                android:onClick="reportPurity"
-                android:text="Submit a purity Report" />
-
-            <Button
-                android:text="Logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/logout_button"
-                app:layout_anchor="@+id/include"
-                app:layout_anchorGravity="bottom|left"
-                android:layout_gravity="top|right"
-                android:onClick="logout" />
-
-        </LinearLayout>
-
         <!--<ListView-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:id="@+id/reportView" />-->
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/profile_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_weight="1"
+                    android:onClick="goProfile"
+                    android:text="Profile"
+                    app:layout_anchor="@+id/include"
+                    app:layout_anchorGravity="top|left" />
+
+                <Button
+                    android:id="@+id/submit_button"
+                    android:layout_width="78dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.50"
+                    android:onClick="report"
+                    android:text="Submit a Report"
+                    app:layout_anchor="@+id/include" />
+
+                <Button
+                    android:id="@+id/button6"
+                    android:layout_width="99dp"
+                    android:layout_height="wrap_content"
+                    android:onClick="reportPurity"
+                    android:text="Submit a purity Report" />
+
+                <Button
+                    android:id="@+id/logout_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|right"
+                    android:onClick="logout"
+                    android:text="Logout"
+                    app:layout_anchor="@+id/include"
+                    app:layout_anchorGravity="bottom|left" />
+
+                <Button
+                    android:id="@+id/graphButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="createGraph"
+                    android:text="Create \n Graph" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
