Added more to graph activity

--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
@@ -16,10 +16,10 @@
         tools:layout_editor_absoluteY="8dp">
 
         <com.jjoe64.graphview.GraphView
+            android:id="@+id/graph"
             android:layout_width="match_parent"
             android:layout_height="200dip"
-            app:seriesType="line"
-            android:id="@+id/graph" />
+            app:seriesType="line" />
 
         <EditText
             android:id="@+id/locationField"
