--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
@@ -35,12 +35,13 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Year"
-            android:inputType="number" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/graphButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="graphCreate"
             android:text="Create \n Graph" />
 
 
