--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/content_graph.xml
@@ -30,6 +30,34 @@
             android:text="Contaminant and Virus PPM by Month"
             android:gravity="center"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="20dp">
+
+            <TextView
+                android:id="@+id/keyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Key" />
+
+            <TextView
+                android:id="@+id/contText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Contaminant PPM" />
+
+            <TextView
+                android:id="@+id/virusText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Virus PPM" />
+        </LinearLayout>
+
         <EditText
             android:id="@+id/locationField"
             android:layout_width="match_parent"
