--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_graph.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_graph.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.noahrickles.waterreporterteam14_harambelovedwaters.controllers.GraphActivity">
 
+    <include layout="@layout/content_graph" />
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,11 +17,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="?attr/colorPrimaryDark"
             app:popupTheme="@style/AppCompactLight.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_graph" />
 
 </android.support.design.widget.CoordinatorLayout>
