--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,10 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_gravity="bottom|left"
+                android:layout_gravity="bottom|start"
                 android:layout_weight="1"
                 android:onClick="goProfile"
-                android:text="Profile" />
+                android:text="@string/profile" />
 
             <Button
                 android:id="@+id/submit_button"
@@ -45,17 +45,19 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@+id/profile_button"
+                android:layout_toEndOf="@+id/profile_button"
                 android:layout_weight="0.50"
                 android:onClick="report"
-                android:text="Submit a Report"
-                app:layout_anchor="@+id/include" />
+                android:text="@string/submit_report" />
+                <!--app:layout_anchor="@+id/include"-->
+
 
             <Button
                 android:id="@+id/button6"
                 android:layout_width="99dp"
                 android:layout_height="wrap_content"
                 android:onClick="reportPurity"
-                android:text="Submit a purity Report"
+                android:text="@string/submit_purity_report"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
@@ -66,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="createGraph"
-                android:text="Create \n Graph"
+                android:text="@string/create_graph"
                 android:layout_marginRight="13dp"
                 android:layout_marginEnd="13dp"
                 android:layout_alignParentTop="true"
@@ -90,9 +92,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_gravity="top|right"
+            android:layout_gravity="top|end"
             android:onClick="logout"
-            android:text="Logout"
+            android:text="@string/logout"
             app:layout_anchor="@+id/include"
             app:layout_anchorGravity="bottom|left" />
 
