--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_profile.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/layout/activity_profile.xml
@@ -51,21 +51,21 @@
             android:inputType="textPostalAddress"
             android:ems="10"
             android:id="@+id/home_address_text"
-            android:hint="Home Address" />
+            android:hint="@string/home_address" />
 
         <Button
-            android:text="Save Changes"
+            android:text="@string/save_changes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/save_changes"
             android:onClick="saveChanges" />
 
         <Button
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/logout_button"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:onClick="cancel" />
 
         <TextView
